kubernetes/sample1/openig.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openig
spec:
  replicas: 1
  # For dev, we only need a couple of revs
  revisionHistoryLimit: 2
  template:
    metadata:
      name: openig
      labels:
         name: openig
    spec:
      containers:
      - name: openig
        # This template gets replaced with the real image name by the deploy script
        image: openig-k8s-sample1
        # Assume image is in our docker cache. Part of the CI build process
        imagePullPolicy: IfNotPresent
        ports:
          - name: openig
            containerPort: 8080
        volumeMounts:
          - name: keystore
            mountPath: /var/secrets/openig
            readOnly: true
      volumes:
        - name: keystore
          secret:
            secretName: ig-keystore
